objects/Logical_ID__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Logical IDs</relationshipLabel>
        <relationshipName>Logical_IDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;Logical ID will automatically populate the vAuto Account number field on the account&quot;</defaultValue>
        <label>Instructions</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <formula>Account__r.ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>CASE(Account__r.Type, 
&apos;Customer&apos;, &apos;Dealership&apos;,
&apos;Secondary Acct&apos;, &apos;Dealership&apos;,
&apos;HQ Corporate&apos;,&apos;Enterprise&apos;,
&apos;Aux feed account&apos;,&apos;Status Inactive&apos;,
&apos;Dealership&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>LEFT(Account__r.BillingPostalCode,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <label>Logical ID</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MP{0000}</displayFormat>
        <label>Logical ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logical IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>